Allow clients to reuse a "park".

Patch from <yamt>, fixes PR kern/44086 by him.